<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutLogin"
    tools:context="pg.proyecto.especiesarboreas.Activities.LoginAppActivity">

    <LinearLayout
        android:id="@+id/linearLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/login_image"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="180dp"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:text="@string/loginText"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/user"
            android:layout_width="288dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/password"
            android:layout_width="288dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginTop="40dp"
            android:text="@string/action_sign_in_short" />

        <TextView
            android:id="@+id/c_cuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/c_cuenta"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>