<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nEspecie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pg.proyecto.especiesarboreas.fragments.colaboradores.NuevaEspecieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <EditText
                android:id="@+id/nom_nueva_especie"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/nom_esp_mant"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/spinner_esp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/descNueReg"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/descNewRegistro"
                android:inputType="textMultiLine" />

            <ImageView
                android:id="@+id/img_nuevo_caso"
                android:layout_width="154dp"
                android:layout_height="112dp"
                android:layout_marginTop="20dp"
                android:src="@android:drawable/ic_menu_gallery"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/btn_img_reg_nuevo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:onClick="abrirCamara"
                android:src="@android:drawable/ic_menu_camera"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnUbicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/gris"
                android:text="@string/msgBtnUbi"
                app:icon="@android:drawable/ic_menu_mylocation" />

            <TextView
                android:id="@+id/txt_up_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_subir_img"
                android:textAlignment="center"
                android:textSize="14sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_reg_nuevo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/btn_reg_nuevo" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>